# datagen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/client/: Image.cpp  SimRunner.cpp
src/client/annotate/: BoxObject.h  Camera.cpp  Camera.h  Object.h  ObjectFilter.h  TrajectoryPoseGenerator.cpp
src/client/gui/: InputParser.h
src/cpp/client/: SimRunner.h
src/cpp/client/airsim/: AirSimInterface.cpp  AirSimInterface.h  Image.h
src/cpp/client/annotate/: Annotator.cpp  Annotator.h  AnnotatorFlight.cpp  AnnotatorFlight.h  Camera.h  Gate.h  Gates.h  Labels.h  Object.h  ObjectFilter.cpp  ObjectFilter.h  RandomPoseDataGenerator.cpp  RandomPoseDataGenerator.h  TrajectoryPoseGenerator.cpp  TrajectoryPoseGenerator.h
src/cpp/client/gui/: Args.h  CmdListener.h
src/cpp/client/sim/: Autopilot.cpp  Autopilot.h  Controller.cpp  Controller.h  DroneModel.cpp  DroneModel.h  SensorModel.cpp  SensorModel.h  Simulation.cpp  Simulation.h
src/cpp/datagen/: airsimflight.cpp  customcontroller.cpp  flightsimu.cpp  randomview.cpp
src/datagen/: randomview.cpp
src/python/run/: explore.py  genimg.py  genshots.py  setanalysis.py
src/python/samplegen/imggen/: DetermImgGen.py  ImgGen.py  RandomImgGen.py
src/python/samplegen/labelmaker/: LabelMaker.py
src/python/samplegen/scene/: Camera.py  Gate.py  GateLarge.py  GateOpen.py  GateTall.py  GateThin250.py  Light.py  Scene.py  Square.py
src/python/samplegen/setanalysis/: SetAnalyzer.py
src/python/samplegen/shotgen/: GateGen.py  ShotCreate.py  ShotGen.py  ShotLoad.py
src/python/samplegen/shotgen/engine3d/: Explorer.py  PointProjector.py  SceneEngine.py  View.py
src/python/samplegen/shotgen/engine3d/opengl/: FileParser.py  GLSquare.py  GateGLLarge.py  GateGLOpen.py  GateGLPole.py  GateGLTall.py  GateGLThin250.py  OpenGlEngine.py  OpenGlView.py  Person.py
src/python/samplegen/shotgen/lightgen/: ConstantLightGen.py  LightGen.py  RandomLightGen.py
src/python/samplegen/shotgen/positiongen/: PositionGen.py  RandomPositionGen.py  TrajectoryGen.py
